--- a/react-project-one/src/index.css
+++ b/react-project-one/src/index.css
@@ -7,12 +7,7 @@
 
 body{
   height: 100vh;
-  display:flex;
-  flex-wrap: wrap;
-  gap:20px;
-  justify-content: center;
-  align-items: center;
-  font-size: 2rem;
+  /* font-size: 2rem; */
   background-color: rgb(77, 77, 25);
   color: white;
 }
