--- a/react-hooks/src/index.css
+++ b/react-hooks/src/index.css
@@ -3,7 +3,7 @@
   margin: 0;
 }
 body{
-  background-color: black;
+  background-color: rgba(220, 228, 165, 0.292);
   
   display: flex;
   justify-content: center;
