laerned the concept of components in css

--- a/react-hooks/src/components/Counter.css
+++ b/react-hooks/src/components/Counter.css
@@ -4,7 +4,7 @@
 }
 
 .counter {
-    background-color: bisque;
+    background-color: rgb(236, 229, 23);
     color: black;
     padding: 4px;
     margin: 10px;
